--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Likes</title>
 </head>
 <body>
+    <a href="shazypage.html">index.html</a>
   <h6>A list of things I love doing</h6> 
   <ol>
       <li>Crying alot</li>
